--- a/locales/volto.pot
+++ b/locales/volto.pot
@@ -1,139 +1,554 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Plone\n"
-"POT-Creation-Date: 2023-08-29T17:34:28.901Z\n"
+"POT-Creation-Date: 2025-01-09T08:53:20.705Z\n"
 "Last-Translator: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
 "Language-Team: Plone i18n <plone-i18n@lists.sourceforge.net>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"MIME-Version: 1.0\n"
 "Language-Code: en\n"
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8\n"
 "Domain: volto\n"
 
+#. Default: "Add criteria"
 #: components/manage/Widgets/DataQueryWidget
-# defaultMessage: Add criteria
 msgid "Add criteria"
 msgstr ""
 
+#. Default: "Center"
 #: components/manage/Blocks/DataConnectedEmbedBlock/Edit
-# defaultMessage: Center
 msgid "Center"
 msgstr ""
 
+#. Default: "Choices"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Choices
 msgid "Choices"
 msgstr ""
 
+#. Default: "Close"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Close
 msgid "Close"
 msgstr ""
 
+#. Default: "Criteria"
 #: components/manage/Widgets/DataQueryWidget
-# defaultMessage: Criteria
 msgid "Criteria"
 msgstr ""
 
+#. Default: "Default"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Default
 msgid "Default"
 msgstr ""
 
+#. Default: "Description"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Description
 msgid "Description"
 msgstr ""
 
+#. Default: "Embed code error, please follow the instructions and try again."
 #: components/manage/Blocks/DataConnectedEmbedBlock/Edit
-# defaultMessage: Embed code error, please follow the instructions and try again.
 msgid "Embed code error, please follow the instructions and try again."
 msgstr ""
 
+#. Default: "Embeded Google Maps"
 #: components/manage/Blocks/DataConnectedEmbedBlock/View
-# defaultMessage: Embeded Google Maps
 msgid "Embeded Google Maps"
 msgstr ""
 
+#. Default: "Enter map Embed Code"
 #: components/manage/Blocks/DataConnectedEmbedBlock/Edit
-# defaultMessage: Enter map Embed Code
 msgid "Enter map Embed Code"
 msgstr ""
 
+#. Default: "Full"
 #: components/manage/Blocks/DataConnectedEmbedBlock/Edit
-# defaultMessage: Full
 msgid "Full"
 msgstr ""
 
+#. Default: "Google Maps Embedded Block"
 #: components/manage/Blocks/DataConnectedEmbedBlock/Edit
-# defaultMessage: Google Maps Embedded Block
 msgid "Google Maps Embedded Block"
 msgstr ""
 
+#. Default: "Left"
 #: components/manage/Blocks/DataConnectedEmbedBlock/Edit
-# defaultMessage: Left
 msgid "Left"
 msgstr ""
 
+#. Default: "No options"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: No options
 msgid "No options"
 msgstr ""
 
+#. Default: "No value"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: No value
 msgid "No value"
 msgstr ""
 
+#. Default: "Please use the sidebar to add Embed URL."
 #: components/manage/Blocks/DataConnectedEmbedBlock/Edit
-# defaultMessage: Please use the sidebar to add Embed URL.
 msgid "Please use the sidebar to add Embed URL"
 msgstr ""
 
+#. Default: "Choices"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Choices
 msgid "Provider Choices"
 msgstr ""
 
+#. Default: "Required"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Required
 msgid "Required"
 msgstr ""
 
+#. Default: "Right"
 #: components/manage/Blocks/DataConnectedEmbedBlock/Edit
-# defaultMessage: Right
 msgid "Right"
 msgstr ""
 
+#. Default: "Select provider"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Select provider
 msgid "Select provider"
 msgstr ""
 
+#. Default: "Select…"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Select…
 msgid "Select…"
 msgstr ""
 
+#. Default: "Short Name"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Short Name
 msgid "Short Name"
 msgstr ""
 
+#. Default: "Title"
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Title
 msgid "Title"
 msgstr ""
 
+#. Default: "Used for programmatic access to the fieldset."
 #: components/manage/Widgets/SelectProviderPickWidget
-# defaultMessage: Used for programmatic access to the fieldset.
 msgid "Used for programmatic access to the fieldset."
 msgstr ""
 
+#. Default: "Alignment"
+#: messages
+msgid "alignmentTitle"
+msgstr ""
+
+#. Default: "Allows rich text formatting"
+#: messages
+msgid "allowRichText"
+msgstr ""
+
+#. Default: "Allowed params"
+#: messages
+msgid "allowedParamsField"
+msgstr ""
+
+#. Default: "Allowed URL parameters"
+#: messages
+msgid "allowedURLParams"
+msgstr ""
+
+#. Default: "Autoquery field"
+#: messages
+msgid "autoqueryFieldTitle"
+msgstr ""
+
+#. Default: "Select block type"
+#: messages
+msgid "blockTypeField"
+msgstr ""
+
+#. Default: "Block type selected: {type}"
+#: components/manage/Blocks/CustomConnectedBlock/View
+msgid "blockTypeSelected"
+msgstr ""
+
+#. Default: "Colors"
+#: messages
+msgid "colorsTitle"
+msgstr ""
+
+#. Default: "Column"
+#: messages
+msgid "columnTitle"
+msgstr ""
+
+#. Default: "Column value"
+#: messages
+msgid "columnValueLabel"
+msgstr ""
+
+#. Default: "Leave empty to show all columns"
+#: messages
+msgid "columnsDescription"
+msgstr ""
+
+#. Default: "Columns"
+#: messages
+msgid "columnsTitle"
+msgstr ""
+
+#. Default: "Component type"
+#: messages
+msgid "componentType"
+msgstr ""
+
+#. Default: "Condition value"
+#: messages
+msgid "conditionValueLabel"
+msgstr ""
+
+#. Default: "Conditional data block"
+#: messages
+msgid "conditionalDataBlockTitle"
+msgstr ""
+
+#. Default: "Country Flag"
+#: messages
+msgid "countryFlagTitle"
+msgstr ""
+
+#. Default: "Select the country to be displayed."
+#: messages
+msgid "countryNameDescription"
+msgstr ""
+
+#. Default: "Country name"
+#: messages
+msgid "countryNameTitle"
+msgstr ""
+
+#. Default: "Data column"
+#: messages
+msgid "dataColumn"
+msgstr ""
+
+#. Default: "Data column link"
+#: messages
+msgid "dataColumnLink"
+msgstr ""
+
+#. Default: "Data connected table"
+#: messages
+msgid "dataConnectedTable"
+msgstr ""
+
+#. Default: "Data provider"
+#: messages
+msgid "dataProviderTitle"
+msgstr ""
+
+#. Default: "Data query"
+#: messages
+msgid "dataQuery"
+msgstr ""
+
+#. Default: "Data source"
+#: messages
+msgid "dataSourceFieldsetTitle"
+msgstr ""
+
+#. Default: "Default"
+#: messages
+msgid "defaultFieldsetTitle"
+msgstr ""
+
+#. Default: "Description"
+#: messages
+msgid "descriptionTitle"
+msgstr ""
+
+#. Default: "Divide each row into separate cells"
+#: messages
+msgid "divideRow"
+msgstr ""
+
+#. Default: "Dotted Table Chart"
+#: messages
+msgid "dottedTableChartTitle"
+msgstr ""
+
+#. Default: "Dropdown items"
+#: messages
+msgid "dropdownItemsFieldsetTitle"
+msgstr ""
+
+#. Default: "Edit custom connected block"
+#: messages
+msgid "editCustomBlockTitle"
+msgstr ""
+
+#. Default: "Edit DataQuery Filter"
+#: messages
+msgid "editDataQueryFilterTitle"
+msgstr ""
+
+#. Default: "Embed URL"
+#: messages
+msgid "embedUrl"
+msgstr ""
+
+#. Default: "Equal"
+#: messages
+msgid "equalOperator"
+msgstr ""
+
+#. Default: "External link"
+#: messages
+msgid "externalLink"
+msgstr ""
+
+#. Default: "Format specifier"
+#: messages
+msgid "formatSpecifier"
+msgstr ""
+
+#. Default: "Greater than"
+#: messages
+msgid "greaterThanOperator"
+msgstr ""
+
+#. Default: "Header"
+#: messages
+msgid "headerTitle"
+msgstr ""
+
+#. Default: "Height"
+#: messages
+msgid "height"
+msgstr ""
+
+#. Default: "Map height"
+#: messages
+msgid "heightDescription"
+msgstr ""
+
+#. Default: "Data-connected embed"
+#: messages
+msgid "iframeTitle"
+msgstr ""
+
+#. Default: "Includes"
+#: messages
+msgid "includesOperator"
+msgstr ""
+
+#. Default: "Less than"
+#: messages
+msgid "lessThanOperator"
+msgstr ""
+
+#. Default: "Link template"
+#: messages
+msgid "linkTemplate"
+msgstr ""
+
+#. Default: "Make the table compact"
+#: messages
+msgid "makeTableCompact"
+msgstr ""
+
+#. Default: "Maximum dot count"
+#: messages
+msgid "maxDotCountTitle"
+msgstr ""
+
+#. Default: "Maximum results"
+#: messages
+msgid "maxResults"
+msgstr ""
+
+#. Default: "New window"
+#: messages
+msgid "newWindowChoice"
+msgstr ""
+
+#. Default: "No results"
+#: messages
+msgid "noResults"
+msgstr ""
+
+#. Default: "Not equal"
+#: messages
+msgid "notEqualOperator"
+msgstr ""
+
+#. Default: "Not includes"
+#: messages
+msgid "notIncludesOperator"
+msgstr ""
+
+#. Default: "Operator"
+#: messages
+msgid "operatorLabel"
+msgstr ""
+
+#. Default: "Pagination"
+#: messages
+msgid "paginationTitle"
+msgstr ""
+
+#. Default: "Placeholder"
+#: messages
+msgid "placeholderField"
+msgstr ""
+
+#. Default: "Placeholder value"
+#: messages
+msgid "placeholderValueTitle"
+msgstr ""
+
+#. Default: "Select a provider from the sidebar"
+#: components/manage/Blocks/DataQueryFilter/View
+msgid "providerSelection"
+msgstr ""
+
+#. Default: "Select…"
 #: components/manage/Widgets/DataQueryWidget
-# defaultMessage: Select…
 msgid "querystring-widget-select"
+msgstr ""
+
+#. Default: "Criteria"
+#: messages
+msgid "querystringTitle"
+msgstr ""
+
+#. Default: "Remove table border"
+#: messages
+msgid "removeTableBorder"
+msgstr ""
+
+#. Default: "HTML tag"
+#: messages
+msgid "htmlTagTitle"
+msgstr ""
+
+#. Default: "Rows"
+#: messages
+msgid "rowsTitle"
+msgstr ""
+
+#. Default: "Same window"
+#: messages
+msgid "sameWindowChoice"
+msgstr ""
+
+#. Default: "Please select a block type from sidebar"
+#: components/manage/Blocks/CustomConnectedBlock/View
+msgid "selectBlockType"
+msgstr ""
+
+#. Default: "Settings"
+#: messages
+msgid "settingsFieldsetTitle"
+msgstr ""
+
+#. Default: "Enable the dropdown select to navigate to other pages. In the "Dropdown items" section you can set the criterias to filter the items displayed in the dropdown. If no criterias are set, the siblings of the current page are displayed in the dropdown."
+#: messages
+msgid "showDropdownDescription"
+msgstr ""
+
+#. Default: "Show dropdown"
+#: messages
+msgid "showDropdownTitle"
+msgstr ""
+
+#. Default: "Enable it to display the flag of the selected country. Disable it to display the preview image of the current page. If the page has no preview image set, it will display nothing."
+#: messages
+msgid "showFlagDescription"
+msgstr ""
+
+#. Default: "Show country flag"
+#: messages
+msgid "showFlagTitle"
+msgstr ""
+
+#. Default: "Show header"
+#: messages
+msgid "showHeader"
+msgstr ""
+
+#. Default: "Enable it to display the name of the selected country. Disable it to display the title of the page."
+#: messages
+msgid "showNameDescription"
+msgstr ""
+
+#. Default: "Show country name"
+#: messages
+msgid "showNameTitle"
+msgstr ""
+
+#. Default: "Size data"
+#: messages
+msgid "sizeDataTitle"
+msgstr ""
+
+#. Default: "Source"
+#: messages
+msgid "sourceField"
+msgstr ""
+
+#. Default: "Link"
+#: messages
+msgid "sourceLinkField"
+msgstr ""
+
+#. Default: "Sources"
+#: messages
+msgid "sourcesField"
+msgstr ""
+
+#. Default: "Stripe alternate rows with color"
+#: messages
+msgid "stripeRows"
+msgstr ""
+
+#. Default: "Styling"
+#: messages
+msgid "stylingFieldsetTitle"
+msgstr ""
+
+#. Default: "Template"
+#: messages
+msgid "templateTitle"
+msgstr ""
+
+#. Default: "Text template"
+#: messages
+msgid "textTemplate"
+msgstr ""
+
+#. Default: "Section friendly name"
+#: messages
+msgid "titleDescription"
+msgstr ""
+
+#. Default: "Title"
+#: messages
+msgid "titleLabel"
+msgstr ""
+
+#. Default: "See D3 format documentation"
+#: messages
+msgid "tooltipFormatSpecifierDescription"
+msgstr ""
+
+#. Default: "Tool-tip format specifier"
+#: messages
+msgid "tooltipFormatSpecifierTitle"
+msgstr ""
+
+#. Default: "Add suffix/prefix to text. Use {value} for value placeholder"
+#: messages
+msgid "tooltipTextTemplateDescription"
+msgstr ""
+
+#. Default: "Tool-tip text template"
+#: messages
+msgid "tooltipTextTemplateTitle"
 msgstr ""
