--- a/locales/it/LC_MESSAGES/volto.po
+++ b/locales/it/LC_MESSAGES/volto.po
@@ -31,9 +31,39 @@ msgstr ""
 msgid "Close"
 msgstr ""
 
+#. Default: "Conditional data block"
+#: messages
+msgid "Conditional data block"
+msgstr ""
+
+#. Default: "Country Flag"
+#: messages
+msgid "Country Flag"
+msgstr ""
+
 #. Default: "Criteria"
 #: components/manage/Widgets/DataQueryWidget
 msgid "Criteria"
+msgstr ""
+
+#. Default: "Custom connected block"
+#: messages
+msgid "Custom connected block"
+msgstr ""
+
+#. Default: "Data Table"
+#: messages
+msgid "Data Table"
+msgstr ""
+
+#. Default: "Data connected embed"
+#: messages
+msgid "Data connected embed"
+msgstr ""
+
+#. Default: "DataQuery Filter"
+#: messages
+msgid "DataQuery Filter"
 msgstr ""
 
 #. Default: "Default"
@@ -44,6 +74,11 @@ msgstr ""
 #. Default: "Description"
 #: components/manage/Widgets/SelectProviderPickWidget
 msgid "Description"
+msgstr ""
+
+#. Default: "Dotted Table Chart"
+#: messages
+msgid "Dotted Table Chart"
 msgstr ""
 
 #. Default: "Embed code error, please follow the instructions and try again."
@@ -201,16 +236,6 @@ msgstr ""
 msgid "conditionValueLabel"
 msgstr ""
 
-#. Default: "Conditional data block"
-#: messages
-msgid "conditionalDataBlockTitle"
-msgstr ""
-
-#. Default: "Country Flag"
-#: messages
-msgid "countryFlagTitle"
-msgstr ""
-
 #. Default: "Select the country to be displayed."
 #: messages
 msgid "countryNameDescription"
@@ -264,11 +289,6 @@ msgstr ""
 #. Default: "Divide each row into separate cells"
 #: messages
 msgid "divideRow"
-msgstr ""
-
-#. Default: "Dotted Table Chart"
-#: messages
-msgid "dottedTableChartTitle"
 msgstr ""
 
 #. Default: "Dropdown items"
